[project]
name = "ComfyUI"
version = "0.6.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "numpy>=2.0.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "safetensors>=0.7.0",
    "packaging>=25.0",
    "psutil>=7.2.0",
    "transformers>=4.57.3",
    "diffusers>=0.36.0",
    "scipy>=1.13.1",
    "torchsde>=0.2.6",
    "av>=15.1.0",
    "aiohttp>=3.13.2",
    "pydantic>=2.12.5",
    "spandrel>=0.4.1",
    "kornia>=0.8.2",
    "alembic>=1.16.5",
    "comfyui-frontend-package>=1.36.9",
    "comfyui-workflow-templates>=0.7.64",
    "comfyui-embedded-docs>=0.3.1",
    "pydantic-settings>=2.11.0",
    "sentencepiece>=0.2.1",
    "opencv-python>=4.11.0.86",
    "imageio-ffmpeg>=0.6.0",
    "accelerate>=1.10.1",
    "peft>=0.17.1",
    "ftfy>=6.3.1",
    "pyloudnorm>=0.1.1",
    "gguf>=0.17.1",
    "sageattention>=1.0.6",
    "setuptools>=80.9.0",
    "opencv-python-headless>=4.11.0.86",
    "librosa>=0.11.0",
    "pillow>=11.3.0",
    "color-matcher>=0.6.0",
    "matplotlib>=3.9.4",
    "huggingface-hub>=0.36.0",
    "onnx>=1.19.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
flash-attn = { git = "https://github.com/Dao-AILab/flash-attention", tag = "v2.8.0" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools", "torch==2.6.0"]




[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
